--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 					<div class="col-lg-7">
 						<div class="banner_content">
 							<h3 class="text-uppercase">Hell0</h3>
-							<h1 class="text-uppercase">I am Dhani</h1>
-							<h5 class="text-uppercase">Software Developer at <a class="nav-link" href="https://www.scg.com/id/index.php">SLCI</a></h5>
+							<h1 class="text-uppercase">I am Dhani Baharzah</h1>
+							<h5 class="text-uppercase">Software Developer at <link class="nav-link" href="https://www.scg.com/id/index.php">SLCI</link></h5>
 							<div class="d-flex align-items-center">
 								<a class="primary_btn" href="#"><span>Hire Me</span></a>
-								<a class="primary_btn tr-bg" href="#"><span>Get CV</span></a>
+								<a class="primary_btn tr-bg" href="visualcv.com/dhanibaharzah"><span>Get CV</span></a>
 							</div>
 						</div>
 					</div>
@@ -116,7 +116,7 @@
 							is in beast beginning signs open god you're gathering whose gathered cattle let. 
 							Creature whales fruit unto meat the life beginning all in under give two.
 						</p>
-						<a class="primary_btn" href="#"><span>Download CV</span></a>
+						<a class="primary_btn" href="visualcv.com/dhanibaharzah"><span>Download CV</span></a>
 					</div>
 				</div>
 			</div>
@@ -198,16 +198,16 @@
 				<div class="offset-lg-2 col-lg-4 col-md-6">
 					<div class="client-info">
 						<div class="d-flex mb-50">
-							<span class="lage">10</span>
-							<span class="smll">Years Experience Working</span>
+							<span class="lage">1</span>
+							<span class="smll">Year Experience Working</span>
 						</div>
 						<div class="call-now d-flex">
 							<div>
 								<span class="fa fa-phone"></span>
 							</div>
 							<div class="ml-15">
-								<p>call us now</p>
-								<h3>(+1)-800-555-6789</h3>
+								<p>Feel free to ask</p>
+								<h3>(+62)-813-176-790-56</h3>
 							</div>
 						</div>
 					</div>
@@ -596,7 +596,7 @@
 			<div class="row footer_bottom justify-content-center">
 				<p class="col-lg-8 col-sm-12 footer-text">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com/wp/template/satner/" target="_blank">ColorLib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		</div>
