--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 				<div class="row">
 					<div class="col-lg-7">
 						<div class="banner_content">
-							<h3 class="text-uppercase">Hell0</h3>
+							<h3 class="text-uppercase">Hello World!</h3>
 							<h1 class="text-uppercase">I am Dhani Baharzah</h1>
-							<h5 class="text-uppercase">Software Developer at <link class="nav-link" href="https://www.scg.com/id/index.php">SLCI</link></h5>
+							<h5 class="text-uppercase">Software Developer at <link class="nav-link" href="https://scg-cloud.andalsoftware.com/">SCG Lightweight Concrete Indonesia</link></h5>
 							<div class="d-flex align-items-center">
 								<a class="primary_btn" href="#"><span>Hire Me</span></a>
 								<a class="primary_btn tr-bg" href="visualcv.com/dhanibaharzah"><span>Get CV</span></a>
@@ -104,17 +104,16 @@
 
 				<div class="offset-lg-1 col-lg-5">
 					<div class="main_title text-left">
-						<h2>let’s <br>
+						<h2>Let’s <br>
 							Introduce about <br>
 							myself</h2>
 						<p>
-							Whose given. Were gathered. There first subdue greater. Bearing you Whales heaven 
-							midst their. Beast creepeth. Fish days.
+							Hi! I'm Dhani, i am a Software Developer at SLCI.
 						</p>
 						<p>
-							Is give may shall likeness made yielding spirit a itself together created after sea 
-							is in beast beginning signs open god you're gathering whose gathered cattle let. 
-							Creature whales fruit unto meat the life beginning all in under give two.
+							I have good knowledge in Computer Networking, Linux OS environtment, Front-end and Back-end development.
+							I also have some projects that related in information and technology services.
+							As additional details and projects that i accomplished please review my graphical curiculum vitae that i made below
 						</p>
 						<a class="primary_btn" href="visualcv.com/dhanibaharzah"><span>Download CV</span></a>
 					</div>
@@ -223,10 +222,9 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-8 text-center">
 					<div class="main_title">
-						<h2>service offers </h2>
+						<h2>Service offers </h2>
 						<p>
-							Is give may shall likeness made yielding spirit a itself togeth created 
-							after sea <br> is in beast beginning signs open god you're gathering ithe
+							Computer Networking <br> Build network from scratch, configure IP address, test and run connection for over 50+ devices (e.g. Server, PC, Printer, Generic Hub and Wireless Access Point )
 						</p>
 					</div>
 				</div>
@@ -235,28 +233,28 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s1.png" alt="">
-						<h4>Wp developing</h4>
+						<h4>Linux Operating System</h4>
 						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s2.png" alt="">
-						<h4>UI/ux design</h4>
+						<h4>Front-end Development</h4>
 						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s3.png" alt="">
-						<h4>Web design</h4>
+						<h4>Back-end Development</h4>
 						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s4.png" alt="">
-						<h4>seo optimize</h4>
+						<h4>Graphic Designer</h4>
 						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
 					</div>
 				</div>
