--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 							I also have some projects that related in information and technology services.
 							As additional details and projects that i accomplished please review my graphical curiculum vitae that i made below
 						</p>
-						<a class="primary_btn" href="visualcv.com/dhanibaharzah"><span>Download CV</span></a>
+						<a class="primary_btn" href="www.visualcv.com/dhanibaharzah"><span>Download CV</span></a>
 					</div>
 				</div>
 			</div>
