--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<div class="banner_content">
 							<h3 class="text-uppercase">Hello World!</h3>
 							<h1 class="text-uppercase">I am Dhani Baharzah</h1>
-							<h5 class="text-uppercase">Software Developer at <link class="nav-link" href="https://scg-cloud.andalsoftware.com/">SCG Lightweight Concrete Indonesia</link></h5>
+							<h5 class="text-uppercase">Software Developer at <a href="https://scg-cloud.andalsoftware.com/">SCG Lightweight Concrete Indonesia</a></h5>
 							<div class="d-flex align-items-center">
 								<a class="primary_btn" href="#"><span>Hire Me</span></a>
 								<a class="primary_btn tr-bg" href="visualcv.com/dhanibaharzah"><span>Get CV</span></a>
