--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title><img src="dhani.jpg" alt="Smiley face" height="42" width="42">Dhani's Laboratories</title>
+  <title><link rel="icon" href="dhani.jpg" />Dhani's Laboratories</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
