--- a/index.html
+++ b/index.html
@@ -224,8 +224,7 @@
 					<div class="main_title">
 						<h2>Service offers </h2>
 						<p>
-							Computer Networking <br> Build network from scratch, configure IP address, test and run connection for over 50+ devices (e.g. Server, PC, Printer, Generic Hub and Wireless Access Point )
-						</p>
+							Information and Technology Services</p>
 					</div>
 				</div>
 			</div>
@@ -234,28 +233,28 @@
 					<div class="feature_item">
 						<img src="img/services/s1.png" alt="">
 						<h4>Linux Operating System</h4>
-						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+						<p>Familiar with Ubuntu, Kali and Parrot OS desktop. Also Linux OS for server like Ubuntu 18.04 Live Server OS. </p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s2.png" alt="">
 						<h4>Front-end Development</h4>
-						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+						<p>Build a good-looking softwares using HTML, Javascript, Bootstrap, Jquery UI, Highcharts and Canvas-gauge.</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s3.png" alt="">
 						<h4>Back-end Development</h4>
-						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+						<p>Running the softwares for dynamically need using PHP Codeigniter, MySQL, Cronjob, and LINE Developer.</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s4.png" alt="">
 						<h4>Graphic Designer</h4>
-						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+						<p>Design and engineer a png or jpg graphical image to visualize an information and embedded it into website.</p>
 					</div>
 				</div>
 			</div>
@@ -594,7 +593,7 @@
 			<div class="row footer_bottom justify-content-center">
 				<p class="col-lg-8 col-sm-12 footer-text">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com/wp/template/satner/" target="_blank">ColorLib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with ColorLib by <a href="https://colorlib.com/wp/template/satner/" target="_blank">Satner and Developed by Dhani Baharzah</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		</div>
