--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<h5 class="text-uppercase">Software Developer at <br> <a href="https://scg-cloud.andalsoftware.com/">SCG Lightweight Concrete Indonesia</a></h5>
 							<div class="d-flex align-items-center">
 								<a class="primary_btn" href="#"><span>Hire Me</span></a>
-								<a class="primary_btn tr-bg" href="visualcv.com/dhanibaharzah"><span>Get CV</span></a>
+								<a class="primary_btn tr-bg" href="https://www.visualcv.com/dhanibaharzah/"><span>Get CV</span></a>
 							</div>
 						</div>
 					</div>
@@ -115,7 +115,7 @@
 							I also have some projects that related in information and technology services.
 							As additional details and projects that i accomplished please review my graphical curiculum vitae that i made below
 						</p>
-						<a class="primary_btn" href="www.visualcv.com/dhanibaharzah"><span>Download CV</span></a>
+						<a class="primary_btn" href="https://www.visualcv.com/dhanibaharzah/"><span>Download CV</span></a>
 					</div>
 				</div>
 			</div>
@@ -222,9 +222,13 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-8 text-center">
 					<div class="main_title">
-						<h2>Service offers </h2>
+						<h2>Service Offers </h2>
 						<p>
-							Information and Technology Services</p>
+							Information and Technology Services<br>
+							Embedded System Development<br>
+							Code and Program Deployment<br>
+							Computer Networking
+						</p>
 					</div>
 				</div>
 			</div>
