--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 							Information and Technology Services<br>
 							Embedded System Development<br>
 							Code and Program Deployment<br>
-							Computer Networking
+							Computer and System Networking
 						</p>
 					</div>
 				</div>
