--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<div class="row">
 					<div class="col-lg-7">
 						<div class="banner_content">
-							<h3 class="text-uppercase">Hi, There!</h3>
+							<h3 class="text-uppercase">Hello!</h3>
 							<h1 class="text-uppercase">I am Dhani Baharzah</h1>
 							<h5 class="text-uppercase">Software Developer at <br> <a href="https://scg-cloud.andalsoftware.com/">SCG Lightweight Concrete Indonesia</a></h5>
 							<div class="d-flex align-items-center">
