--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
 			<div class="row footer_bottom justify-content-center">
 				<p class="col-lg-8 col-sm-12 footer-text">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with ColorLib by <a href="https://colorlib.com/wp/template/satner/" target="_blank">Satner and Developed by Dhani Baharzah</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made by <a href="https://colorlib.com/wp/template/satner/" target="_blank">Satner</a> and developed by Dhani Baharzah
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		</div>
