--- a/index.html
+++ b/index.html
@@ -580,9 +580,7 @@
 				<div class="col-lg-12">
 					<div class="footer_top flex-column">
 						<div class="footer_logo">
-							<a href="#">
-								<img src="img/logox.png" alt="">
-							</a>
+							<a style="color:#854eee;" href="#" class="navbar-brand logo_h" href="index.html"><b>D H A N I</b></a>
 							<h4>Follow Me</h4>
 						</div>
 						<div class="footer_social">
@@ -597,7 +595,7 @@
 			<div class="row footer_bottom justify-content-center">
 				<p class="col-lg-8 col-sm-12 footer-text">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made by <a href="https://colorlib.com/wp/template/satner/" target="_blank">Satner</a> and developed by Dhani Baharzah
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is designed by <a href="https://colorlib.com/wp/template/satner/" target="_blank">Satner</a> and developed by Dhani Baharzah
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		</div>
