--- a/index.html
+++ b/index.html
@@ -454,9 +454,9 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-8 text-center">
 					<div class="main_title">
-						<h2>client say about me</h2>
-						<p>Is give may shall likeness made yielding spirit a itself togeth created after sea is in beast <br>
-							 beginning signs open god you're gathering ithe</p>
+						<h2>Client say about me</h2>
+						<p>I don't have idea about add this text, if you want describe about me i will attach your comment on this site, haha. <br>
+							 Please give your feedback to me, Whatsapp: 081217679056</p>
 					</div>
 				</div>
 			</div>
@@ -470,7 +470,7 @@
         					<div class="col-lg-8">
         						<div class="testi_text">
         							<h4>Elite Martin</h4>
-									<p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
+									<p>I don't have idea about add this text, if you want describe about me i will attach your comment on this site, haha. </p>
         						</div>
         					</div>
         				</div>
@@ -483,7 +483,7 @@
         					<div class="col-lg-8">
         						<div class="testi_text">
         							<h4>Davil Saden</h4>
-									<p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
+									<p>I don't have idea about add this text, if you want describe about me i will attach your comment on this site, haha. </p>
         						</div>
         					</div>
         				</div>
@@ -496,7 +496,7 @@
         					<div class="col-lg-8">
         						<div class="testi_text">
         							<h4>Elite Martin</h4>
-									<p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
+									<p>I don't have idea about add this text, if you want describe about me i will attach your comment on this site, haha. </p>
         						</div>
         					</div>
         				</div>
@@ -509,7 +509,7 @@
         					<div class="col-lg-8">
         						<div class="testi_text">
         							<h4>Davil Saden</h4>
-									<p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
+									<p>I don't have idea about add this text, if you want describe about me i will attach your comment on this site, haha. </p>
         						</div>
         					</div>
         				</div>
@@ -522,7 +522,7 @@
         					<div class="col-lg-8">
         						<div class="testi_text">
         							<h4>Elite Martin</h4>
-									<p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
+									<p>I don't have idea about add this text, if you want describe about me i will attach your comment on this site, haha. </p>
         						</div>
         					</div>
         				</div>
@@ -535,7 +535,7 @@
         					<div class="col-lg-8">
         						<div class="testi_text">
         							<h4>Davil Saden</h4>
-									<p>Him, made can't called over won't there on divide there male fish beast own his day third seed sixth seas unto. Saw from </p>
+									<p>I don't have idea about add this text, if you want describe about me i will attach your comment on this site, haha.</p>
         						</div>
         					</div>
         				</div>
@@ -554,7 +554,7 @@
 					<div class="subscription_box text-center">
 						<h2 class="text-uppercase text-white">get update from anywhere</h2>
 						<p class="text-white">
-							Bearing Void gathering light light his eavening unto dont afraid. 
+							I don't have idea about add this text, if you want describe about me i will attach your comment on this site, haha.
 						</p>
 						<div class="subcribe-form" id="mc_embed_signup">
 							<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscription relative">
