--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
 			<div class="row justify-content-center align-items-center">
 				<div class="col-lg-12">
 					<div class="subscription_box text-center">
-						<h2 class="text-uppercase text-white">get update from anywhere</h2>
+						<h2 class="text-uppercase text-white">Get update from anywhere</h2>
 						<p class="text-white">
 							I don't have idea about add this text, if you want describe about me i will attach your comment on this site, haha.
 						</p>
