--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
         					<div class="col-lg-8">
         						<div class="testi_text">
         							<h4>Davil Saden</h4>
-									<p>I don't have idea about add this text, if you want describe about me i will attach your comment on this site, haha.</p>
+									<p>I don't have idea about add this text, if you want describe about me, i will attach your comment on this site, haha.</p>
         						</div>
         					</div>
         				</div>
