--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="navbar-brand logo_h" href="index.html"><img src="img/logox.png" alt=""></a>
+					<a href="index.html" style="color:#854eee;"><b>D H A N I</b> B A H A R Z A H</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -580,9 +580,7 @@
 				<div class="col-lg-12">
 					<div class="footer_top flex-column">
 						<div class="footer_logo">
-							<a href="#">
-								<img src="img/logox.png" alt="">
-							</a>
+							<a href="index.html" style="color:#854eee;"><b>D H A N I</b> B A H A R Z A H</a>
 							<h4>Follow Me</h4>
 						</div>
 						<div class="footer_social">
