--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a href="index.html" style="color:#854eee;"><b>D H A N I</b> B A H A R Z A H</a>
+					<a href="index.html"><b>D H A N I</b> B A H A R Z A H</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -580,7 +580,7 @@
 				<div class="col-lg-12">
 					<div class="footer_top flex-column">
 						<div class="footer_logo">
-							<a href="index.html" style="color:#854eee;"><b>D H A N I</b> B A H A R Z A H</a>
+							<a href="index.html"><b>D H A N I</b> B A H A R Z A H</a>
 							<h4>Follow Me</h4>
 						</div>
 						<div class="footer_social">
@@ -595,7 +595,7 @@
 			<div class="row footer_bottom justify-content-center">
 				<p class="col-lg-8 col-sm-12 footer-text">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made by <a href="https://colorlib.com/wp/template/satner/" target="_blank">Satner</a> and developed by Dhani Baharzah
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is designed by <a href="https://colorlib.com/wp/template/satner/" target="_blank">Satner</a> and developed by <a href="https://visualcv.com/dhanibaharzah/" target="_blank">Dhani Baharzah</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		</div>
