--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 					<div class="client-info">
 						<div class="d-flex mb-50">
 							<span class="lage">1.5</span>
-							<span class="smll">Year Experience Working</span>
+							<span class="smll">Years hands on experience</span>
 						</div>
 						<div class="call-now d-flex">
 							<div>
