--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
 
 				<div class="offset-lg-1 col-lg-5">
 					<div class="main_title text-left">
-						<h2>Let’s <br>
-							Introduce about <br>
-							myself</h2>
+						<h2>Let me <br>
+							Introduce <br>
+							What i did</h2>
 						<p>
 							Hi! I'm Dhani, i am a Software Developer at SLCI.
 						</p>
 						<p>
-							I have good knowledge in Computer Networking, Linux OS environtment, Front-end and Back-end development.
+							I do good about Computer Networking, Linux OS environtment, Embedded System Development, Front-end and Back-end development.
 							I also have some projects that related in information and technology services.
 							As additional details and projects that i accomplished please review my graphical curiculum vitae that i made below
 						</p>
@@ -272,7 +272,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="main_title text-left">
-						<h2>quality work <br>
+						<h2>About what i did & <br>
 							Recently done project </h2>
 					</div>
 				</div>
