--- a/contact.html
+++ b/contact.html
@@ -143,34 +143,32 @@
     <!--================Contact Area =================-->
         
         <!--================Footer Area =================-->
-	<footer class="footer_area">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-12">
-                    <div class="footer_top flex-column">
-                        <div class="footer_logo">
-                            <a href="#">
-                                <img src="img/logox.png" alt="">
-                            </a>
-                            <h4>Follow Me</h4>
-                        </div>
-                        <div class="footer_social">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-behance"></i></a>
+        <footer class="footer_area">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-12">
+                        <div class="footer_top flex-column">
+                            <div class="footer_logo">
+                                <a href="index.html"><b>D H A N I</b> B A H A R Z A H</a>
+                                <h4>Follow Me</h4>
+                            </div>
+                            <div class="footer_social">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                                <a href="#"><i class="fa fa-dribbble"></i></a>
+                                <a href="#"><i class="fa fa-behance"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="row footer_bottom justify-content-center">
+                    <p class="col-lg-8 col-sm-12 footer-text">
+                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is designed by <a href="https://colorlib.com/wp/template/satner/" target="_blank">Satner</a> and developed by <a href="https://visualcv.com/dhanibaharzah/" target="_blank">Dhani Baharzah</a>
+    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                </div>
             </div>
-            <div class="row footer_bottom justify-content-center">
-                <p class="col-lg-8 col-sm-12 footer-text">
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-            </div>
-        </div>
-    </footer>
+        </footer>
     <!--================End Footer Area =================-->
     
     <!-- Optional JavaScript -->
