--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 					<div class="client-info">
 						<div class="d-flex mb-50">
 							<span class="lage">1.5</span>
-							<span class="smll">Years hands on experience</span>
+							<span class="smll">Years <br> hands on experience</span>
 						</div>
 						<div class="call-now d-flex">
 							<div>
@@ -573,7 +573,7 @@
 	</section>
 	<!--================ End Newsletter Area =================-->
 
-	<!--================Footer Area =================-->
+	<!--================F =================-->
 	<footer class="footer_area">
 		<div class="container">
 			<div class="row justify-content-center">
