--- a/about.html
+++ b/about.html
@@ -184,22 +184,22 @@
                     </div>
                 </div>
                 <div class="offset-lg-2 col-lg-4 col-md-6">
-                    <div class="client-info">
-                        <div class="d-flex mb-50">
-                            <span class="lage">10</span>
-                            <span class="smll">Years Experience Working</span>
-                        </div>
-                        <div class="call-now d-flex">
-                            <div>
-                                <span class="fa fa-phone"></span>
-                            </div>
-                            <div class="ml-15">
-                                <p>call us now</p>
-                                <h3>(+1)-800-555-6789</h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+					<div class="client-info">
+						<div class="d-flex mb-50">
+							<span class="lage">1.5</span>
+							<span class="smll">Years <br> hands on experience</span>
+						</div>
+						<div class="call-now d-flex">
+							<div>
+								<span class="fa fa-phone"></span>
+							</div>
+							<div class="ml-15">
+								<p>Feel free to ask</p>
+								<h3>(+62)-813-176-790-56</h3>
+							</div>
+						</div>
+					</div>
+				</div>
             </div>
         </div>
     </section>
