--- a/services.html
+++ b/services.html
@@ -281,9 +281,8 @@
 			</div>
 			<div class="row footer_bottom justify-content-center">
 				<p class="col-lg-8 col-sm-12 footer-text">
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is designed by <a href="https://colorlib.com/wp/template/satner/" target="_blank">Satner</a> and developed by <a href="https://visualcv.com/dhanibaharzah/" target="_blank">Dhani Baharzah</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is designed by <a href="https://colorlib.com/wp/template/satner/" target="_blank">Satner</a> and developed by <a href="https://visualcv.com/dhanibaharzah/" target="_blank">Dhani Baharzah</a> with <a target="_blank" href="https://colorlib.com/wp/template/satner/>ColorLib"></a>
+                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		</div>
 	</footer>
