--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="icon" href="img/favicon.jpg" type="image/png/jpg">
+	<link rel="icon" href="img/favicon.png" type="image/png/jpg">
 	<title>Dhani's Laboratories</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
