--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							Introduce <br>
 							What i did</h2>
 						<p>
-							Hi! I'm Dhani, i am a Software Developer at SLCI.
+							Hi! I'm Dhani, a Software Developer at SLCI.
 						</p>
 						<p>
 							I do good about Computer Networking, Linux OS environtment, Embedded System Development, Front-end and Back-end development.
