--- a/index.html
+++ b/index.html
@@ -618,6 +618,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<!-- gmap js-->
 	<script src="js/gmaps.min.js"></script>
 	<script src="js/theme.js"></script>
+	<!--key access gmaps-->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
 </body>
 
 </html>
