--- a/contact.html
+++ b/contact.html
@@ -89,18 +89,18 @@
                     <div class="contact_info">
                         <div class="info_item">
                             <i class="lnr lnr-home"></i>
-                            <h6>California, United States</h6>
-                            <p>Santa monica bullevard</p>
+                            <h6>Bekasi, Jawa Barat, Indonesia</h6>
+                            <p>Mustikasari</p>
                         </div>
                         <div class="info_item">
                             <i class="lnr lnr-phone-handset"></i>
-                            <h6><a href="#">00 (440) 9865 562</a></h6>
+                            <h6><a href="#">0813 1767 9056</a></h6>
                             <p>Mon to Fri 9am to 6 pm</p>
                         </div>
                         <div class="info_item">
                             <i class="lnr lnr-envelope"></i>
-                            <h6><a href="#">support@colorlib.com</a></h6>
-                            <p>Send us your query anytime!</p>
+                            <h6><a href="#">dhanibaharzah@gmail.com</a></h6>
+                            <p>Please send your feed back</p>
                         </div>
                     </div>
                 </div>
