--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
 		<div class="main_menu">
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
+					<style>
+						div.a {
+							font-size: 15px;
+							}	
+					</style>
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a href="index.html"><b>D H A N I</b> B A H A R Z A H</a>
+					<a class="a" href="index.html"><b>D H A N I</b> B A H A R Z A H</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
