--- a/index.html
+++ b/index.html
@@ -25,11 +25,6 @@
 		<div class="main_menu">
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
-					<style>
-						div.a {
-							font-size: 1000%;
-							}	
-					</style>
 					<!-- Brand and toggle get grouped for better mobile display -->
 					<a class="a" href="index.html"><b>D H A N I</b> B A H A R Z A H</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -118,7 +113,7 @@
 						<p>
 							I do good about Computer Networking, Linux OS environtment, Embedded System Development, Front-end and Back-end development.
 							I also have some projects that related in information and technology services.
-							As additional details and projects that i accomplished please review my graphical curiculum vitae that i made below
+							As additional details and projects that i accomplished please review my resumes that i made below
 						</p>
 						<a class="primary_btn" href="https://www.visualcv.com/dhanibaharzah/"><span>Download CV</span></a>
 					</div>
