--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
 					<div class="main_title">
 						<h2>Service Offers </h2>
 						<p>
-							Information and Technology Services<br>
-							Embedded System Development<br>
-							Code and Program Deployment<br>
+							Information and Technology Services,<br>
+							Embedded System Development,<br>
+							Code and Program Deployment,<br>
 							Computer and System Networking
 						</p>
 					</div>
@@ -456,7 +456,7 @@
 					<div class="main_title">
 						<h2>Client say about me</h2>
 						<p>I don't have idea about add this text, if you want describe about me i will attach your comment on this site, haha. <br>
-							 Please give your feedback to me, Whatsapp: 081217679056</p>
+							 Please give your feedback to me, Whatsapp: 081317679056</p>
 					</div>
 				</div>
 			</div>
