Update index.html #1

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 					<!-- Brand and toggle get grouped for better mobile display -->
 					<style>
 					 .newfont {
-						 font-size: 24px;
+						 font-size: 28px;
 						 color: #854fee;
 					 }
 					 .boldy {
 						 font-weight: bold;
 					 }
 					</style>
-					<a class="newfont" href="index.html"><span class="boldy">D H A N I</span>  B A H A R Z A H</a>
+					<a class="newfont" href="index.html"><b>D H A N I</b> B A H A R Z A H</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -83,10 +83,10 @@
 						<div class="banner_content">
 							<h3 class="text-uppercase">Here!</h3>
 							<h1 class="text-uppercase">I am Dhani Baharzah</h1>
-							<h5 class="text-uppercase">Software Developer at <a class="newfont" href="https://scg-cloud.andalsoftware.com/">SLCI</a></h5>
+							<h5 class="text-uppercase">Software Developer at <a target="_blank" href="https://www.google.com/maps/place/PT.+SCG+Lightweight+Concrete+Indonesia/@-6.3813968,107.3216501,17z/data=!3m1!4b1!4m5!3m4!1s0x2e6975c62ec057fb:0xf83f33488513ee7e!8m2!3d-6.3814021!4d107.3238388">SLCI</a></h5>
 							<div class="d-flex align-items-center">
-								<a class="primary_btn" href="#"><span>Hire Me</span></a>
-								<a class="primary_btn tr-bg" href="https://www.visualcv.com/dhanibaharzah/"><span>Get CV</span></a>
+								<a class="primary_btn" target="_blank" href="https://www.linkedin.com/in/dhanibaharzah/"><span>Hire Me</span></a>
+								<a class="primary_btn tr-bg" target="_blank" href="https://www.visualcv.com/dhanibaharzah/"><span>Get CV</span></a>
 							</div>
 						</div>
 					</div>
@@ -124,7 +124,7 @@
 							I also have some projects that related in information and technology services.
 							As additional details and projects that i accomplished please review my resumes that i made below
 						</p>
-						<a class="primary_btn" href="https://www.visualcv.com/dhanibaharzah/"><span>Download CV</span></a>
+						<a class="primary_btn" target="_blank" href="https://www.visualcv.com/dhanibaharzah/"><span>Download CV</span></a>
 					</div>
 				</div>
 			</div>
@@ -478,7 +478,7 @@
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Elite Martin</h4>
+        							<h4>Mohammad</h4>
 									<p>I don't have idea about add this text, if you want describe about me i will attach your comment on this site, haha. </p>
         						</div>
         					</div>
@@ -491,7 +491,7 @@
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Davil Saden</h4>
+        							<h4>Husein</h4>
 									<p>I don't have idea about add this text, if you want describe about me i will attach your comment on this site, haha. </p>
         						</div>
         					</div>
@@ -504,7 +504,7 @@
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Elite Martin</h4>
+        							<h4>Ramadhani</h4>
 									<p>I don't have idea about add this text, if you want describe about me i will attach your comment on this site, haha. </p>
         						</div>
         					</div>
@@ -517,7 +517,7 @@
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Davil Saden</h4>
+        							<h4>Baharzah</h4>
 									<p>I don't have idea about add this text, if you want describe about me i will attach your comment on this site, haha. </p>
         						</div>
         					</div>
@@ -530,7 +530,7 @@
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Elite Martin</h4>
+        							<h4>Mohammad Husein</h4>
 									<p>I don't have idea about add this text, if you want describe about me i will attach your comment on this site, haha. </p>
         						</div>
         					</div>
@@ -543,7 +543,7 @@
         					</div>
         					<div class="col-lg-8">
         						<div class="testi_text">
-        							<h4>Davil Saden</h4>
+        							<h4>Ramadhani Baharzah</h4>
 									<p>I don't have idea about add this text, if you want describe about me, i will attach your comment on this site, haha.</p>
         						</div>
         					</div>
@@ -582,21 +582,21 @@
 	</section>
 	<!--================ End Newsletter Area =================-->
 
-	<!--================F =================-->
+	<!--================Footer Area =================-->
 	<footer class="footer_area">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-12">
 					<div class="footer_top flex-column">
 						<div class="footer_logo">
-							<a href="index.html"><b>D H A N I</b> B A H A R Z A H</a>
+							<a class="newfont" href="index.html"><b>D H A N I</b> B A H A R Z A H</a>
 							<h4>Follow Me</h4>
 						</div>
 						<div class="footer_social">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
+							<a href="https://github.com/dhanibaharzah" target="_blank"><i class="fa fa-github"></i></a>
+							<a href="https://instagram.com/dhanibaharzah" target="_blank"><i class="fa fa-instagram"></i></a>
+							<a href="https://linkedin.com/in/dhanibaharzah" target="_blank"><i class="fa fa-linkedin"></i></a>
+							<a href="https://dhanibaharzah.tumblr.com" target="_blank"><i class="fa fa-tumblr"></i></a>
 						</div>
 					</div>
 				</div>
@@ -604,7 +604,7 @@
 			<div class="row footer_bottom justify-content-center">
 				<p class="col-lg-8 col-sm-12 footer-text">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is designed by <a href="https://colorlib.com/wp/template/satner/" target="_blank">Satner</a> and developed by <a href="https://visualcv.com/dhanibaharzah/" target="_blank">Dhani Baharzah</a> with <a target="_blank" href="https://colorlib.com/wp/template/satner">ColorLib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is designed by <a href="https://colorlib.com/wp/template/satner/" target="_blank">Satner</a> using <a target="_blank" href="https://colorlib.com/wp/template/satner">ColorLib</a> and developed by <a href="https://visualcv.com/dhanibaharzah/" target="_blank">Dhani Baharzah</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		</div>
