--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						<div class="banner_content">
 							<h3 class="text-uppercase">Here!</h3>
 							<h1 class="text-uppercase">I am Dhani Baharzah</h1>
-							<h5 class="text-uppercase">Software Developer at <a target="_blank" href="https://www.google.com/maps/place/PT.+SCG+Lightweight+Concrete+Indonesia/@-6.3813968,107.3216501,17z/data=!3m1!4b1!4m5!3m4!1s0x2e6975c62ec057fb:0xf83f33488513ee7e!8m2!3d-6.3814021!4d107.3238388">SLCI</a></h5>
+							<h5 class="text-uppercase">Web Programmer at <a target="_blank" href="https://www.google.com/maps/place/PT.+SCG+Lightweight+Concrete+Indonesia/@-6.3813968,107.3216501,17z/data=!3m1!4b1!4m5!3m4!1s0x2e6975c62ec057fb:0xf83f33488513ee7e!8m2!3d-6.3814021!4d107.3238388">SLCI</a></h5>
 							<div class="d-flex align-items-center">
 								<a class="primary_btn" target="_blank" href="https://www.linkedin.com/in/dhanibaharzah/"><span>Hire Me</span></a>
 								<a class="primary_btn tr-bg" target="_blank" href="https://www.visualcv.com/dhanibaharzah/"><span>Get CV</span></a>
