--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Dhani Baharzah
 ---
 
 <div class="home" id="home">
-  <h1 class="pageTitle"><i>I.D.E.A.S</i></h1>
+  <h1 class="pageTitle"><i>I.D.E.A.S.</i></h1>
   <ul class="posts noList">
     {% for post in paginator.posts %}
       <li>
