--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="contents text-center">
               <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Mohammad Husein Ramadhani Baharzah</h1>
               <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms"> Content Writer | Web App Developer | Hardware Consultant | Tech-Stacks Enthusiast</p>
-              <a href="https://github.com/dhanibaharzah?tab=repositories" target="_blanks" class="btn btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Repositories</a>
+              <a href="https://github.com/dhanibaharzah?tab=repositories" target="_blanks" class="btn btn-common wow fadeInUp text-center" data-wow-duration="1000ms" data-wow-delay="400ms">Repositories</a>
             </div>
           </div>
         </div> 
@@ -407,7 +407,7 @@
                 <i class="lnr lnr-clock"></i>
               </div>             
               <div class="fact-count">
-                <h3><span class="counter">3224</span></h3>
+                <h3><span class="counter">5280</span></h3>
                 <h4>Working Hours</h4>
               </div>
             </div>
@@ -418,7 +418,7 @@
                 <i class="lnr lnr-briefcase"></i>
               </div>            
               <div class="fact-count">
-                <h3><span class="counter">7</span></h3>
+                <h3><span class="counter">9</span></h3>
                 <h4>Completed Projects</h4>
               </div>
             </div>
@@ -429,7 +429,7 @@
                 <i class="lnr lnr-user"></i>
               </div>              
               <div class="fact-count">
-                <h3><span class="counter">14</span></h3>
+                <h3><span class="counter">16</span></h3>
                 <h4>No. of Clients</h4>
               </div>
             </div>
