--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="col-md-10">
             <div class="contents text-center">
               <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Mohammad Husein Ramadhani Baharzah</h1>
-              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms"> Content Writer | Web App Developer | Hardware Consultant | Tech-Stacks Enthusiast</p>
+              <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms"> Web Developer | Software Engineer | Data Researcher | Tech-Stacks Enthusiast</p>
               <a href="https://github.com/dhanibaharzah?tab=repositories" target="_blanks" class="btn btn-common wow fadeInUp text-center" data-wow-duration="1000ms" data-wow-delay="400ms">Repositories</a>
             </div>
           </div>
@@ -126,8 +126,8 @@
               <div class="icon">
                 <i class="lnr lnr-pencil"></i>
               </div>
-              <h4>Content Writing</h4>
-              <p> Write and review a content about the cutting edge technologies.</p>
+              <h4>Data Researcher</h4>
+              <p> Using Tableau i can explore your data and get insight.</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6">
@@ -144,8 +144,8 @@
               <div class="icon">
                 <i class="lnr lnr-mustache"></i>
               </div>
-              <h4>Computer Hardware Consultancy</h4>
-              <p>Before you buy Computer or anything about it you can ask some advice that useful, prevent to be fooled.</p>
+              <h4>Computers Geek</h4>
+              <p>Feel free to ask if you want to know more about tech-things that you build.</p>
             </div>
           </div>
         </div>
