--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <div class="section-header">          
           <h2 class="section-title">Portfolio</h2>
           <hr class="lines">
-          <p class="section-subtitle">Portfolio below shows my works,<br> you can consider it before you decide ti use my services.</p>
+          <p class="section-subtitle">Portfolio below shows my works,<br> you can consider it before you decide to use the services.</p>
         </div>
         <div class="row">          
           <div class="col-md-12">
