--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
             <div class="blog-item-wrapper">
               <div class="blog-item-img">
                 <a href="single-post.html">
-                  <img src="img/blog/img1.jpg" alt="">
+                  <img src="img/portfolio/img1.jpg" alt="">
                 </a>                
               </div>
               <div class="blog-item-text"> 
@@ -619,7 +619,7 @@
             <div class="blog-item-wrapper">
               <div class="blog-item-img">
                 <a href="single-post.html">
-                  <img src="img/blog/img2.jpg" alt="">
+                  <img src="img/portfolio/img2.jpg" alt="">
                 </a>                
               </div>
               <div class="blog-item-text"> 
@@ -644,7 +644,7 @@
             <div class="blog-item-wrapper">
               <div class="blog-item-img">
                 <a href="single-post.html">
-                  <img src="img/blog/img3.jpg" alt="">
+                  <img src="img/portfolio/img3.jpg" alt="">
                 </a>                
               </div>
               <div class="blog-item-text"> 
