--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="keywords" content="Bootstrap, Parallax, Template, Registration, Landing">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="author" content="Grayrids">
-    <title>Welcome mates!</title>
+    <link rel = "icon" type = "image/png" href = "https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg">
+    <title>DHANIDEV!</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -33,7 +34,7 @@
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
             <a href="https://dev.to/dhanibaharzah">
-              <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="dhanibaharzah's DEV Profile" height="60" width="60">
+              <img style="margin: 2px;" src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="dhanibaharzah's DEV Profile" height="60" width="60">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
               <i class="lnr lnr-menu"></i>
