--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
-            <a href="https://dev.to/dhanibaharzah">
-              <img style="margin: 2px;" src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="dhanibaharzah's DEV Profile" height="60" width="60">
-            </a>
+            <a href="index.html" class="navbar-brand"><img class="img-fulid" src="img/logo.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-navbar" aria-controls="main-navbar" aria-expanded="false" aria-label="Toggle navigation">
               <i class="lnr lnr-menu"></i>
             </button>
